Moar Google Maps links.

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -36,7 +36,7 @@
 
         <h2>Getting to the Venue</h2>
 
-        <p>The address is <strong>Maridalsveien 13-17</strong></p>
+        <p>The address is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15"><strong>Maridalsveien 13-17</strong></a></p>
 
         <strong>Walking</strong>
         <p>
@@ -47,15 +47,16 @@
 
         <strong>Tram (Recommended)</strong>
         <p>
-          Lines 11, 12 and 13 all stop at <em>Schous plass</em>, where
+          Tram lines 11, 12 and 13 all stop at <em>Schous plass</em>, where
           you can walk down Nordregate and across the bridge to
-          Vulkan.
+          Vulkan. <a href="https://maps.google.com/maps?saddr=Schous+plass+%4059.920807,10.759322&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.921947,10.759327&sspn=0.007399,0.026157&geocode=FadRkgMdmiykAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&mra=ls&t=m&z=17">Get directions</a>.
         </p>
 
         <strong>Bus</strong>
         <p>
           Bus 53 and 54 stops at <em>M&oslash;llerveien</em>. Walk down
           M&oslash;llerveien and make a left at Dansens Hus.
+          <a href="https://maps.google.com/maps?saddr=Maridalsveien&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&ll=59.921904,10.753341&spn=0.003699,0.013078&sll=59.920302,10.752321&sspn=0.0037,0.013078&geocode=FeVQkgMd5A2kAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&dirflg=w&mra=mift&mrsp=0&sz=17&t=m&z=17">Get directions.</a>
         </p>
 
         <strong>Taxi</strong>
