--- a/views/openmic.ejs
+++ b/views/openmic.ejs
@@ -58,6 +58,8 @@
           talk and we will give you the stage!
         </p>
         <h3>This is your chance to shine!</h3>
+        <p>One of last years speakers at Open Mic Night has been promoted to the big stage in part due to his amazing talk last year which left speakers and attendants speachless by the power of Emacs.</p>
+        <iframe width="420" height="315" src="http://www.youtube.com/embed/p3Te_a-AGqM" frameborder="0" allowfullscreen></iframe>
         <p>
           There is always a first time for everything. There is a
           first time for when you laid your hand on a keyboard, there
