moved text from schedule to open mic and remove more motivational stuff

--- a/views/openmic.ejs
+++ b/views/openmic.ejs
@@ -22,21 +22,25 @@
 
     <article class="wrap">
         <h1>Open Mic Night</h1>
-
-        <p>At <a href="http://2012.webrebels.org/openmic/">last year's
-          Open Mic Night</a>, attendants and speakers got to hang out
+        <p>The Open Mic Night takes place at
+          <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a>
+          which is just next door to the <a href="/location">conference venue</a>. At the Open
+          Mic Night you as an attendee will be able to get on the
+          stage and do a lightning talk on any topic you want.
+        </p>
+        <p>At Open Mic Night, attendants and speakers get to hang out
           and listen to some briliant talks by some of the amazing
-          local talent. One of them is coming back as a speaker at
+          new talent. One of them is coming back as a speaker at
           this years conference. This is exactly why we hosted the
           Open Mic Night: to help promote new talent!
         </p>
-        <h2>Here's How Open Mic Night Works</h2>
+        <h3>Here's How Open Mic Night Works</h3>
         <ul>
             <li>Open Mic Night is a small pre-party</li>
             <li>Batches of 10 minute lightning talks from our Call For Papers</li>
             <li>Hang out with speakers and attendants whom you'll be spending the next couple of days with</li>
         </ul>
-        <p>
+        <!--<p>
           On the 22th of May we will host a small pre-party. During
           this pre-party we will run a few 30 minutes Open Mic
           lightning talk sessions. The location is large enough for
@@ -46,7 +50,7 @@
           where you get to know everyone who will be at the conference
           and this is an opportunity to get a head start before the
           big event.
-        </p>
+        </p>-->
         <p><strong>Dear attendee: this is your night!</strong></p>
 
         <p>
