--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -7,12 +7,12 @@
 
         <table class="schedule" id="dayI">
             <tr>
-                <th colspan="3">22nd of May - Open Mic Night</th>
+                <th colspan="3">22nd of May - Pre party</th>
             </tr>
             <tr>
                 <td class="time">20:00</td>
                 <td class="title">Intro</td>
-                <td class="additional">We kick off the Open Mic Night</td>
+                <td class="additional">We kick off the <a href="/openmic">Open Mic Night</a></td>
             </tr>
             <tr>
                 <td class="time">Talk I</td>
@@ -40,14 +40,7 @@
                 <td class="additional"> </td>
             </tr>
         </table>
-        <p>
-          The Open Mic Night takes place at
-          <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a>
-          which is just next door to the conference venue. At the Open
-          Mic Night you as an attendee will be able to get on the
-          stage and do a lightning talk on any topic you want.
-          <a href="/openmic/">Read more about the event here!</a>
-        </p>
+       
 
 
         <table class="schedule" id="dayII">
