--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -3,7 +3,7 @@
     <article class="wrap">
 
         <h1>Schedule</h1>
-        <p>The schedule will be set at a later point, but this is the outline for the conference.</p>
+        <p>This is the outline for the conference. More speakers will be added continously up until the event.</p>
 
         <table class="schedule" id="dayI">
             <tr>
@@ -30,12 +30,22 @@
                 <td class="additional"> </td>
             </tr>
             <tr>
+                <td class="time">Break</td>
+                <td class="title"></td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
                 <td class="time">Talk IV</td>
                 <td class="title">tba</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">Talk V</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk VI</td>
                 <td class="title">tba</td>
                 <td class="additional"> </td>
             </tr>
@@ -186,7 +196,6 @@
         </table>
 
     </article>
-
     <% include snips/footer.ejs %>
 </body>
 </html>
