--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -40,7 +40,7 @@
                 <td class="additional"> </td>
             </tr>
         </table>
-       
+
 
 
         <table class="schedule" id="dayII">
@@ -120,7 +120,7 @@
             </tr>
             <tr>
                 <td class="time">08:00</td>
-                <td class="title">Breakfast.</td>
+                <td class="title">Breakfast</td>
                 <td class="additional" title="Also proper veggie food">There will be bacon!</td>
             </tr>
             <tr>
