--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -1,130 +1,26 @@
 <% include snips/head.ejs %>
 
-	<article class="wrap">
+    <article class="wrap">
         <h1>Speakers</h1>
 
-        <section class="speakers">
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img addy"> </div>
-		            <p class="header">Addy Osmani</p>
-		            <p class="subheader">JavaScript Craftsman</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
+        <div class="speaker">
+            <img class="imageFrame" src="../gfx/speaker_david.jpg">
+            <h2>David Nolen</h2>
+            <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David Nolen spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic>core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
+        </div>
 
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img reginald"> </div>
-		            <p class="header">Reginald Braithwaite</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
+        <div class="speaker">
+            <img class="imageFrame" src="../gfx/speaker_garann.jpg">
+            <h2>Garann Means</h2>
+            <p><a href="http://garann.com/"">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She works for Etsy, is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
+        </div>
 
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img magnar"> </div>
-		            <p class="header">Magnar Sveen</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
+        <div class="speaker">
+            <img class="imageFrame" src="../gfx/speaker_reginald.jpg">
+            <h2>Reginald Braithwaite</h2>
+            <p><a href="http://weblog.raganwald.com/">Reginald Braithwaite</a> has more than twenty years of hands-on experience creating software products. He applies his Ruby, JavaScript, CoffeeScript, and advanced programming expertise to crafting well-factored and maintainable code. He speaks and <a href="https://github.com/raganwald/homoiconic">writes</a> about not-so-big design and dynamic meta-programming. Open source accomplishments include <a href="http://recursiveuniver.se/docs/cafeaulife.html">Cafe au Life</a> and <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, in JS/CS, the <a href="http://andand.rubyforge.org/">andand gem for Ruby</a>, and the <a href="https://github.com/raganwald/JQuery-Combinators">jQuery Combinators plugin</a>.</p>
+        </div>
 
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img david"> </div>
-		            <p class="header">David Nolen</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img marius"> </div>
-		            <p class="header">Marius Gundersen</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img garann"> </div>
-		            <p class="header">Garann Means</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img bodil"> </div>
-		            <p class="header">Bodil Stokke</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img robert"> </div>
-		            <p class="header">Robert Nyman</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img mario"> </div>
-		            <p class="header">Mario Heiderich</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <div class="speaker">
-	        	<div class="left">
-		            <div class="img jan"> </div>
-		            <p class="header">Jan Lehnardt</p>
-		            <p class="subheader">Title</p>
-		        </div>
-	            <div class="right info">
-	                <p>Speaker bio. Lorem ipsum dolor sit amet.</p>
-	            </div>
-	        </div>
-
-	        <!--
-	        <div class="speaker">
-	            <div class="img firstname"> </div>
-	            <p class="header">Speaker</p>
-	            <p class="subheader">Title</p>
-	            <div class="info">
-	                <p></p>
-	            </div>
-	        </div>
-	    	-->
-    	</section>
     </article>
 
     <% include snips/footer.ejs %>
