Added Bodil as speaker

--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -4,9 +4,16 @@
         <h1>Speakers</h1>
 
         <div class="speaker">
+            <img class="imageFrame" src="../gfx/speaker_bodil.jpg">
+            <h2>Bodil Stokke</h2>
+            <p>Bodil is a developer, frequent speaker and occasional teacher of web technology and anything that favours s-expressions. She is currently leading the web dev team at Arktekk, a charming little consultancy in Oslo, Norway. She is best known as the creator of the Catnip IDE for Clojure, and for her contributions to the field of programming language theory, especially the Facial Hair Theory of Language Design. She holds a doctorate in Metaphysics from ULC, and her favourite pony is Rainbow Dash.</p>
+        </div>
+
+
+        <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_david.jpg">
             <h2>David Nolen</h2>
-            <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David Nolen spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic>core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
+            <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David Nolen spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
         </div>
 
         <div class="speaker">
