added the beer stats link

--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -28,7 +28,7 @@
           Access to the conference party at the end of day one. Each
           attendee will be given a decent amount of free beverages
           where one can choose between a wide selection of micro
-          brewery beers, wine or mineral water.
+          brewery beers (just checkout the <a href="http://webrebels.tumblr.com/post/24346798911/were-doing-the-accounting-thing-these-days-and">selection of beverages consumed at last years party</a>), wine or mineral water.
         </p>
     </article>
     <% include snips/footer.ejs %>
