--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -6,7 +6,7 @@
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_bodil.jpg">
             <h2>Bodil Stokke</h2>
-            <p>Bodil is a developer, frequent speaker and occasional teacher of web technology and anything that favours s-expressions. She is currently leading the web dev team at Arktekk, a charming little consultancy in Oslo, Norway. She is best known as the creator of the Catnip IDE for Clojure, and for her contributions to the field of programming language theory, especially the Facial Hair Theory of Language Design. She holds a doctorate in Metaphysics from ULC, and her favourite pony is Rainbow Dash.</p>
+            <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and anything that favours s-expressions. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>, a charming little consultancy in Oslo, Norway. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a> for Clojure, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from ULC, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
         </div>
 
 
@@ -19,7 +19,7 @@
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_garann.jpg">
             <h2>Garann Means</h2>
-            <p><a href="http://garann.com/"">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She works for Etsy, is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
+            <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She works for Etsy, is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
         </div>
 
         <div class="speaker">
