Even moar links.

--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -6,7 +6,7 @@
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_bodil.jpg">
             <h2>Bodil Stokke</h2>
-            <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and anything that favours s-expressions. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>, a charming little consultancy in Oslo, Norway. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a> for Clojure, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from ULC, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
+            <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and anything that favours s-expressions. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>, a charming little consultancy in Oslo, Norway. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a> for Clojure, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from <a href="http://www.themonastery.org/catalog/drofmetaphysicscertificate-p-116.html">ULC</a>, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
         </div>
 
 
