--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -23,6 +23,16 @@
         </div>
 
         <div class="speaker">
+            <img class="imageFrame" src="../gfx/speaker_mario.jpg">
+            <h2>Dr.-Ing. Mario Heiderich</h2>
+            <p><a href="http://mario.heideri.ch/">Mario Heiderich</a> is a Microsoft security contractor and founder of the German/UK pen-test outfit <a href="http://cure53.de/">Cure53</a>. He focuses on HTML5, SVG security and believes XSS can be eradicated by using JavaScript. Maybe. Some day.</p>
+
+            <p>Mario invoked the <a href="http://html5sec.org/">HTML5 security cheat-sheet</a> and maintains the Crawly project. In his spare time he delivers trainings and security consultancy for larger German and international companies for sweet sweet money and the simple minded fun in breaking things.</p>
+
+            <p>Mario has spoken on a large variety of international conferences, co-authored two books, several academic papers and doesn’t see a problem in his one-point-five year old son having a tablet already.</p>
+        </div>
+
+        <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_reginald.jpg">
             <h2>Reginald Braithwaite</h2>
             <p><a href="http://weblog.raganwald.com/">Reginald Braithwaite</a> has more than twenty years of hands-on experience creating software products. He applies his Ruby, JavaScript, CoffeeScript, and advanced programming expertise to crafting well-factored and maintainable code. He speaks and <a href="https://github.com/raganwald/homoiconic">writes</a> about not-so-big design and dynamic meta-programming. Open source accomplishments include <a href="http://recursiveuniver.se/docs/cafeaulife.html">Cafe au Life</a> and <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, in JS/CS, the <a href="http://andand.rubyforge.org/">andand gem for Ruby</a>, and the <a href="https://github.com/raganwald/JQuery-Combinators">jQuery Combinators plugin</a>.</p>
