--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -13,7 +13,13 @@
         <div class="speaker">
             <img class="imageFrame" src="../gfx/speaker_david.jpg">
             <h2>David Nolen</h2>
-            <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David Nolen spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
+            <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
+        </div>
+
+        <div class="speaker">
+            <img class="imageFrame" src="../gfx/speaker_jan.jpg">
+            <h2>Jan Lenhardt</h2>
+            <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
         </div>
 
         <div class="speaker">
