More travel info.

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -39,7 +39,7 @@
             </div>
             <div id="locationmap"><div id="map" class="map"> </div></div>
         </div>
-        
+
         <h2>Getting there</h2>
         <p>The address is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15"><strong>Maridalsveien 13-17</strong></a></p>
 
@@ -59,7 +59,7 @@
 
         <strong>Bus</strong>
         <p>
-          Bus 53 and 54 stops at <em>M&oslash;llerveien</em>. Walk down
+          Buses 34 and 54 stop at <em>M&oslash;llerveien</em>. Walk down
           M&oslash;llerveien and make a left at Dansens Hus.
           <a href="https://maps.google.com/maps?saddr=Maridalsveien&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&ll=59.921904,10.753341&spn=0.003699,0.013078&sll=59.920302,10.752321&sspn=0.0037,0.013078&geocode=FeVQkgMd5A2kAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&dirflg=w&mra=mift&mrsp=0&sz=17&t=m&z=17">Get directions.</a>
         </p>
@@ -84,16 +84,23 @@
         </p>
         <p>
           SAS generally offers a more comfortable flight, but
-          Norwegian has in-flight wifi.
+          Norwegian offers free in-flight wifi.
         </p>
+        <h2>From Oslo Airport</h2>
         <p>
-          Hotels can be expensive, so we've arranged for a rebel
-          discount at the hotels around the venue. We'll mail you the
-          promo codes when you book your ticket.
+          Whatever you do, don't grab a taxi from the
+          airport&mdash;it's a really long and expensive ride. The
+          cheapest way to get to Oslo proper is by bus, but the
+          airport express train is also quite reasonable, and is by
+          far the most convenient. You'll want to get off the train at
+          Oslo Central Station, where you'll find taxis and public
+          transport aplenty. If you're staying at the conference
+          hotel, see the guide for getting to the venue above.
         </p>
+
         <h2>Staying in Oslo</h2>
         <p>
-          There are several great hotels within walking distance from
+          There are several great hotels within walking distance of
           the venue. Oslo can be a busy town, so we recommend booking
           your room early! Here are some of the hotels closest to our
           venue:
